# my_finance_ui

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/: deploy.yaml
.github/workflows/: deploy.yaml  tests.yaml
scripts/: run_local_terminal.sh  test_local_docker.sh
src/: __init__.py  app.py
src/.streamlit/: config.toml
src/core/: __init__.py  auth.py  env.py  focus.py  layout.py  logging.py  setup_logging.py  sidebar.py  user.py
src/pages/: ai.py  assets.py  filetypes.py  login.py  logout.py  transaction_input.py  transaction_labeling.py
tests/: conftest.py  test_env.py  test_focus.py  test_setup_logging.py  test_user.py
